# expert_survey_llm

./: pyproject.toml
data/: gpt4_outputs_o1-mini.json  mean_concept_agreement_claude-3-5-sonnet-20240620.csv  mean_concept_agreement_gpt-4o.csv  mean_concept_agreement_o1-mini.csv  outputs_claude-3-5-sonnet-20240620.json  outputs_gpt-4o.json  rdoc_questions_qualtrics.csv
src/expert_survey_llm/: expert_survey_llm.ipynb
