[project]
name = "expert-survey-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.29.0",
    "jupyter>=1.1.1",
    "openai>=1.54.0",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "anthropic>=0.39.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
